perf: Use custom build JRE to reduce the docker image size